--- a/AntiCovidSupport/index.html
+++ b/AntiCovidSupport/index.html
@@ -71,7 +71,7 @@
 	================================================== -->
 	<section class="featured-posts">
 	<div class="section-title">
-		<h2><span>Featured</span></h2>
+		<h2><span>Tin tức</span></h2>
 	</div>
 	<div class="card-columns listfeaturedtag">
 
