--- a/AntiCovidSupport/index.html
+++ b/AntiCovidSupport/index.html
@@ -39,7 +39,7 @@
 			<a class="nav-link" href="">Hỏi đáp</a>
 			</li>
 			<li class="nav-item">
-			<a class="nav-link" href="../Register.html">Đăng ký/ Đăng nhập</a>
+			<a class="nav-link" href="Register.html">Đăng ký/ Đăng nhập</a>
 			</li>
 		</ul>
 		<!-- End Menu -->
